--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "chromatic --project-token=<TOKEN>"
+    "chromatic": "chromatic --project-token=<TOKEN>",
+    "design-system:build-tokens": "node scripts/build-design-tokens.js",
+    "design-system:watch-tokens": "style-dictionary build --watch",
+    "design-system:storybook": "pnpm storybook",
+    "design-system:build": "pnpm build-storybook",
+    "design-system:publish": "pnpm chromatic",
+    "design-system:lint": "pnpm lint && stylelint \"**/*.{css,scss}\"",
+    "design-system:lint:fix": "pnpm lint:fix && stylelint \"**/*.{css,scss}\" --fix"
   },
   "dependencies": {
     "@auth/core": "0.40.0",
@@ -165,6 +172,10 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.13.0",
     "storybook": "^9.1.1",
+    "style-dictionary": "^3.8.0",
+    "stylelint": "^16.23.0",
+    "stylelint-config-standard": "^37.0.0",
+    "stylelint-config-tailwindcss": "^0.0.7",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "3.4.17",
     "tsx": "^4.20.3",
