--- a/package.json
+++ b/package.json
@@ -172,17 +172,17 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.13.0",
     "storybook": "^9.1.1",
-    "style-dictionary": "^3.8.0",
+    "style-dictionary": "^5.0.1",
     "stylelint": "^16.23.0",
-    "stylelint-config-standard": "^37.0.0",
-    "stylelint-config-tailwindcss": "^0.0.7",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-config-tailwindcss": "^1.0.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "3.4.17",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
-  "packageManager": "pnpm@10.13.1",
+  "packageManager": "pnpm@10.14.0+sha256.297534e65d5842450539c1e8022c8831ab5e1fe2eb74664787a815519542d620",
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=10.0.0"
