--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,3 +35,24 @@ jobs:
         with:
           name: storybook-static
           path: storybook-static
+
+  chromatic:
+    runs-on: ubuntu-latest
+    needs: storybook-build
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: pnpm/action-setup@v2
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm build-storybook
+      - name: Publish to Chromatic
+        uses: chromaui/action@latest
+        with:
+          storybookBuildDir: storybook-static
+        env:
+          CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
