--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "chromatic --project-token=<TOKEN>",
+    "chromatic": "chromatic",
     "design-system:build-tokens": "node scripts/build-design-tokens.js",
     "design-system:watch-tokens": "style-dictionary build --watch",
     "design-system:storybook": "pnpm storybook",
@@ -159,6 +159,7 @@
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "chromatic": "^13.1.3",
     "eslint-config-next": "15.4.6",
     "eslint-plugin-storybook": "9.1.1",
     "husky": "^9.1.7",
