--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,7 @@ jobs:
       - name: Build Storybook
         run: pnpm ci:build
 
+      # Nota: CHROMATIC_PROJECT_TOKEN deve ser configurado nos secrets do repositório
       - name: Publish to Chromatic
         uses: chromaui/action@latest
         with:
