--- a/.chromaticrc.json
+++ b/.chromaticrc.json
@@ -1,22 +1,11 @@
 {
   "projectToken": "chpt_ed7c61c0587a8b0",
+  "buildScriptName": "build-storybook",
   "storybookBuildDir": "storybook-static",
   "exitZeroOnChanges": true,
-  "autoAcceptChanges": false,
   "onlyChanged": true,
-  "traceChanged": true,
-  "debug": false,
-  "dryRun": false,
-  "forceRebuild": false,
-  "interactive": false,
-  "fileHashing": true,
-  "untraced": [
-    "node_modules/**",
-    ".git/**",
-    "dist/**",
-    "build/**",
-    "coverage/**",
-    ".next/**",
-    "storybook-static/**"
-  ]
+  "autoAcceptChanges": false,
+  "skip": false,
+  "externals": ["public/**"],
+  "ignoreLastBuildOnBranch": "main"
 }
