--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "4.1.0",
+    "@chromatic-com/storybook": "^4.1.0",
     "@eslint/eslintrc": "^3.3.1",
     "@next/eslint-plugin-next": "^15.4.6",
     "@storybook/addon-a11y": "9.2.0-alpha.2",
