--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@eslint/js": "9.33.0",
     "@hookform/resolvers": "^5.2.1",
     "@next/bundle-analyzer": "15.4.6",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -155,15 +155,9 @@
     "@chromatic-com/storybook": "^4.1.0",
     "@eslint/eslintrc": "^3.3.1",
     "@next/eslint-plugin-next": "^15.4.6",
-    "@storybook/addon-a11y": "9.2.0-alpha.2",
-    "@storybook/addon-docs": "9.2.0-alpha.2",
-    "@storybook/addon-essentials": "9.0.0-alpha.12",
-    "@storybook/addon-interactions": "9.0.0-alpha.10",
-    "@storybook/addon-onboarding": "9.2.0-alpha.2",
-    "@storybook/addon-vitest": "9.2.0-alpha.2",
+    "@storybook/addon-a11y": "^9.1.2",
+    "@storybook/addon-links": "^9.1.2",
     "@storybook/nextjs": "^9.1.2",
-    "@storybook/react-vite": "9.2.0-alpha.2",
-    "@storybook/test": "9.0.0-alpha.2",
     "@storybook/test-runner": "0.23.0",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -187,7 +181,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.13.0",
+    "prisma": "^6.14.0",
     "storybook": "^9.1.2",
     "style-dictionary": "^5.0.1",
     "stylelint": "^16.23.1",
@@ -214,14 +208,16 @@
       "rimraf": "^6.0.1"
     },
     "onlyBuiltDependencies": [
+      "@bundled-es-modules/glob",
       "@prisma/client",
       "@prisma/engines",
+      "@swc/core",
       "@vercel/speed-insights",
+      "core-js-pure",
       "esbuild",
       "prisma",
-      "scrollreveal",
       "sharp",
-      "unrs-resolver"
+      "style-dictionary"
     ]
   }
 }
