--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "chromatic --project-token=chpt_ed7c61c0587a8b0",
-    "chromatic:test": "chromatic --project-token=chpt_ed7c61c0587a8b0 --exit-zero-on-changes",
-    "chromatic:accept": "chromatic --auto-accept-changes",
+    "chromatic": "chromatic --project-token=$CHROMATIC_PROJECT_TOKEN",
+    "chromatic:test": "chromatic --project-token=$CHROMATIC_PROJECT_TOKEN --exit-zero-on-changes",
+    "chromatic:accept": "chromatic --project-token=$CHROMATIC_PROJECT_TOKEN --auto-accept-changes",
     "design-system:build-tokens": "node scripts/build-design-tokens.js",
     "design-system:watch-tokens": "style-dictionary build --watch",
     "design-system:storybook": "pnpm storybook",
@@ -155,10 +155,16 @@
     "@chromatic-com/storybook": "^4.1.0",
     "@eslint/eslintrc": "^3.3.1",
     "@next/eslint-plugin-next": "^15.4.6",
-    "@storybook/addon-a11y": "^9.1.2",
-    "@storybook/addon-links": "^9.1.2",
-    "@storybook/nextjs": "^9.1.2",
+    "@storybook/addon-a11y": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/nextjs": "^8.6.14",
     "@storybook/test-runner": "0.23.0",
+    "@storybook/blocks": "^8.6.14",
+    "@faker-js/faker": "^8.4.1",
+    "msw": "^2.3.2",
+    "msw-storybook-addon": "^2.0.2",
+    "next-router-mock": "^0.2.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -182,7 +188,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "^6.14.0",
-    "storybook": "^9.1.2",
+    "storybook": "^8.6.14",
     "style-dictionary": "^5.0.1",
     "stylelint": "^16.23.1",
     "stylelint-config-standard": "^39.0.0",
