--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@eslint/js": "9.33.0",
     "@hookform/resolvers": "^5.2.1",
     "@next/bundle-analyzer": "15.4.6",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -100,7 +100,7 @@
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
     "@supabase/supabase-js": "^2.55.0",
-    "@sveltejs/kit": "2.29.1",
+    "@sveltejs/kit": "2.30.0",
     "@testing-library/dom": "^10.4.1",
     "@types/debug": "latest",
     "@types/eslint": "latest",
@@ -191,8 +191,8 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.13.0",
-    "storybook": "^9.1.2",
+    "prisma": "^6.14.0",
+    "storybook": "9.2.0-alpha.2",
     "style-dictionary": "^5.0.1",
     "stylelint": "^16.23.1",
     "stylelint-config-standard": "^39.0.0",
