--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@eslint/js": "9.34.0",
     "@hookform/resolvers": "^5.2.1",
     "@next/bundle-analyzer": "15.5.2",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.15.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -202,7 +202,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.13.0",
+    "prisma": "^6.15.0",
     "prisma-zod-generator": "^1.17.1",
     "storybook": "9.2.0-alpha.2",
     "style-dictionary": "^5.0.2",
@@ -215,7 +215,7 @@
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
-  "packageManager": "pnpm@10.14.0+sha256.297534e65d5842450539c1e8022c8831ab5e1fe2eb74664787a815519542d620",
+  "packageManager": "pnpm@10.15.0",
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=10.0.0"
