--- a/package.json
+++ b/package.json
@@ -92,17 +92,17 @@
   "dependencies": {
     "@auth/core": "0.41.1",
     "@auth/prisma-adapter": "^2.11.0",
-    "@base-ui-components/react": "1.0.0-rc.0",
+    "@base-ui/react": "^1.0.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@edge-runtime/vm": "latest",
     "@emotion/is-prop-valid": "^1.4.0",
-    "@eslint/js": "9.39.1",
+    "@eslint/js": "9.39.2",
     "@hookform/resolvers": "^5.2.2",
-    "@next/bundle-analyzer": "16.0.8",
-    "@prisma/adapter-pg": "^7.1.0",
-    "@prisma/client": "7.1.0",
+    "@next/bundle-analyzer": "16.1.0",
+    "@prisma/adapter-pg": "7.2.0",
+    "@prisma/client": "7.2.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -144,8 +144,8 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.0",
     "@vercel/speed-insights": "^1.3.1",
-    "@vitest/browser": "4.0.15",
-    "@vitest/ui": "4.0.15",
+    "@vitest/browser": "4.0.16",
+    "@vitest/ui": "4.0.16",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -162,21 +162,21 @@
     "happy-dom": "20.0.11",
     "input-otp": "latest",
     "jsonwebtoken": "^9.0.3",
-    "lenis": "1.3.15",
-    "lucide-react": "^0.556.0",
+    "lenis": "1.3.16",
+    "lucide-react": "^0.562.0",
     "motion": "^12.23.25",
-    "next": "16.0.8",
+    "next": "16.1.0",
     "next-auth": "4.24.13",
     "next-themes": "latest",
     "nodemailer": "7.0.11",
     "pg": "^8.16.3",
     "pino": "10.1.0",
     "postgres-array": "^3.0.4",
-    "react": "19.2.1",
+    "react": "19.2.3",
     "react-day-picker": "^9.12.0",
-    "react-dom": "19.2.1",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
-    "react-resizable-panels": "^3.0.6",
+    "react-resizable-panels": "^4.0.8",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.5.1",
     "resend": "^6.5.2",
@@ -186,7 +186,7 @@
     "svelte": "^5.45.8",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.181.2",
+    "three": "^0.182.0",
     "vaul": "latest",
     "vue": "^3.5.25",
     "vue-router": "latest",
@@ -198,7 +198,7 @@
     "@asteasolutions/zod-to-openapi": "^8.2.0",
     "@eslint/compat": "^2.0.0",
     "@eslint/eslintrc": "^3.3.3",
-    "@next/eslint-plugin-next": "^16.0.8",
+    "@next/eslint-plugin-next": "^16.1.0",
     "@storybook/addon-a11y": "^10.1.4",
     "@storybook/addon-docs": "^10.1.4",
     "@storybook/addon-onboarding": "^10.1.4",
@@ -208,24 +208,24 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.10.2",
+    "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "@types/react": "19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@types/three": "^0.181.0",
-    "@typescript-eslint/eslint-plugin": "8.49.0",
-    "@typescript-eslint/parser": "8.49.0",
+    "@types/three": "^0.182.0",
+    "@typescript-eslint/eslint-plugin": "8.50.0",
+    "@typescript-eslint/parser": "8.50.0",
     "@vitejs/plugin-react": "^5.1.2",
-    "@vitest/browser": "^4.0.15",
-    "@vitest/browser-playwright": "^4.0.15",
-    "@vitest/coverage-v8": "4.0.15",
-    "@vitest/ui": "^4.0.15",
+    "@vitest/browser": "^4.0.16",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "4.0.16",
+    "@vitest/ui": "^4.0.16",
     "autoprefixer": "^10.4.22",
     "baseline-browser-mapping": "^2.9.5",
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.8",
+    "eslint-config-next": "16.1.0",
     "eslint-plugin-react-hooks": "7.0.1",
     "eslint-plugin-storybook": "^10.1.4",
     "husky": "^9.1.7",
@@ -233,14 +233,14 @@
     "languagetool-cli": "^1.0.13",
     "markdown-to-jsx": "^9.3.2",
     "markdownlint": "^0.40.0",
-    "markdownlint-cli": "^0.46.0",
-    "next-openapi-gen": "^0.8.9",
+    "markdownlint-cli": "^0.47.0",
+    "next-openapi-gen": "^0.9.0",
     "nodemon": "^3.1.11",
     "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "prisma": "7.1.0",
+    "prisma": "7.2.0",
     "prisma-zod-generator": "^2.1.2",
     "storybook": "^10.1.4",
     "style-dictionary": "^5.1.1",
@@ -251,8 +251,8 @@
     "tailwindcss": "3.4.17",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.49.0",
-    "vitest": "^4.0.15"
+    "typescript-eslint": "^8.50.0",
+    "vitest": "^4.0.16"
   },
   "packageManager": "pnpm@10.20.0",
   "engines": {
